main.css
/* ... */
.bgAlcoholWhite { background-image: url(/images/alcohol_white.svg);}
.bgHitRun { background-image: url(/images/hitrun.svg);}
.bgHitRunWhite { background-image: url(/images/hitrun_white.svg);}
.bgTrafficJam { background-image: url(/images/trafficjam.svg);}

.buttonPopupMenu {
  display: none;
  position: absolute;
  right: 0;
  min-width: 200px;
  text-align: left;
  z-index: 10;
  padding: 0;
  background-color: #ffffff;
  color: #000;
  box-shadow: 0 2px 10px 0 rgba(0,0,0,0.2);
  text-decoration: none;
}

.buttonPopupMenu > div:not(.navigationSectionHeader),
.buttonPopupMenu > a {
  display: flex;
  align-items: center;
  white-space: nowrap;
  padding: 10px;
  cursor: pointer;
  text-decoration: none !important;
  color: inherit;
}

.popupOuter {
  display:          none;
  position:         fixed;
  justify-content:  center;
  z-index:          500;
  background-color: rgba(0, 0, 0, 0.7);
  opacity:          1;
  top:              0;
  bottom:           0;
  left:             0;
  right:            0;
  overflow:         auto;
}

.floatingForm {
  display:          flex;
  flex-direction:   column;
  position:         fixed;
  z-index:          100;
  top:              30px;
  left:             50%;
  transform:        translateX(-50%);
  min-width:        400px;
  max-width:        Calc(100% - 10px);
  min-height:       80px;
  padding:          15px;
  border-radius:    3px;
  box-shadow:       0 2px 4px rgba(0,0,0,0.2);
  background-color: #ffffff;
  box-sizing:       border-box;
}

#floatingMessage {
  display:          none;
  position:         fixed;
  z-index:          100000;
  top:              30px;
  left:             50%;
  transform:        translateX(-50%);
  min-width:        300px;
  min-height:       100px;
  justify-content:  center;
  align-items:      center;
  font-size:        18px;
  padding:          10px 15px;
  border-radius:    3px;
  box-shadow:       0 2px 10px 0 rgba(0,0,0,0.2);
  cursor:           pointer;
}

#floatingMessage,  #floatingMessage a {
  color: var(--important-color);
  background-color: var(--important-bgcolor);
}

.notice {
  color: #000000;
  background-color: #fce981;
  padding: 5px;
}

.infoBlock {
  display: flex;
  flex-direction: column;
  width: 100%;
  background-color: #f0f8ff;
  padding: 5px;
  border: 1px solid #ccc;
  max-height: 100px;
  overflow-y: auto;
}

#cookieWarning {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1000;
  background-color: var(--important-bgcolor) !important;
  color: var(--important-color) !important;
  padding: 20px;
  justify-content: space-between;
}

.warningMessage, .warningMessage a {
  background-color: var(--important-bgcolor) !important;
}

.errorMessage, .errorMessage a {
  background-color: #f23825 !important;
  color: #ffffff !important;
}

#messageText {
  text-align: center;
}

.formFullPage {
  display: flex;
  flex-direction: column;
  position: absolute;
  top: 10px;
  width: 700px;
  max-width: Calc(100% - 10px);
  max-height: Calc(100% - 20px);
  min-height: 100px;
  padding: 5px 15px 10px 15px;
  border-radius: 3px;
  box-shadow: 0 2px 4px rgba(0,0,0,0.2);
  background-color: #ffffff;
  box-sizing: border-box;
}

.formScrolling {
  overflow-y: auto;
}

.formFixed {
  position: fixed;
  display: flex;
  flex-direction: column;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 20;
  margin: 5px;
  padding: 10px;
  background-color: #fff;
  opacity: 1;
  border-radius: 3px;
}

.formFixedBack {
  display: flex;
  flex-direction: column;
  position: absolute;
  width: 700px;
  max-width: 100%;
  max-height: 100%;
  min-height: 100px;
  padding: 5px 15px 10px 15px;
  background-color: #ffffff;
  box-sizing: border-box;
}

.formFullPage label, .labelDiv, .formPage label {
  margin-top: 5px;
  margin-bottom: 1px;
}

.popupHeader {
  font-size: 20px;
  text-align: center;
  margin-bottom: 10px;
  padding: 0 15px;
}

.popupCloseCross {
  position: absolute;
  right: 5px;
  top: 4px;
  background: url("/images/close.svg") no-repeat center;
  background-size: 25px;
  height: 20px;
  width: 20px;
  opacity: 0.8;
  cursor: pointer;
}

.popupCloseCross:hover {
  opacity: 1;
}

.closeCrossWhite {
  background: url("/images/closewhite.svg") no-repeat center;
}

.popupBackHeader {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  font-size: 20px;
  font-weight: 500;
  border-bottom: 1px solid #eee;
}

.buttonBack {
  background: url("/images/back.svg") no-repeat center;
  background-size: 20px;
  height: 33px;
  width: 33px;
  margin-right: 10px;
  opacity: 0.8;
  cursor: pointer;
}

.buttonBack:hover {
  opacity: 1;
  background-color: #eee;
  border-radius: 50%;
}

.crossWhite {
  background-image: url("/images/closewhite.svg") !important;
}

.popupFooter {
  display: flex;
  justify-content: flex-end;
  flex-wrap: wrap;
  margin-top: 15px;
}

.popupFooter .button {
  margin-bottom: 5px;
}

.popupInput {
  flex-grow:  1;
  box-sizing: border-box;
}

.inputForm {
  width: 100%;
  height: 2em;
  margin: 0;
  font-size: 12px;
  border: 1px solid #ccc;
  box-sizing: border-box;
  padding: 0 3px;
}

.inputLabel {
  display:       block;
  margin-bottom: 5px;
}

.inputSmall {
  margin:     0;
  font-size:  10px;
  border:     1px solid #ccc;
  box-sizing: border-box;
}

.button {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  height: 30px;
  min-width: 90px;
  box-sizing: border-box;
  border: none;
  padding: 2px 8px 3px 8px;
  margin-left: 5px;
  border-radius: 3px;
  background-color: #000000;
  color: #ffffff;
  font-weight: bold;
  text-decoration: none;
  white-space: nowrap;
  cursor: pointer;
  transition: all .25s;
}

.formError {
  display: none;
  margin-top: 5px;
  color: var(--error-color);
  background-color: var(--error-bgcolor);
  padding: 0.2em 0.3em;
  border-radius: 3px;
}

.button:hover {
  color: var(--link-color);
  background-color: #000000;
  text-decoration: none;
}
/* ... */

